  Next to the check box there's a button to configure sound notifications.

#25 Passwords can be saved encrypted.
  The Alias dialog has a new check box "Save password encrypted".
  When a new Alias is added this check box is switched on by default.
  Encryption and decryption is done using javax.crypto.


4.0.0 (09/09/2019)
==================

Enhancements:

"Alias Schema properties", Filter schemas by name --> Improved layout and tooltip.

New option in "Alias Schema properties": Filter schemas by name.
 See right mouse on Alias --> Alias properties --> tab Schemas --> third radio button.
  This feature was introduced especially for databases with very many Schemas.
  It may help to shorten SQuirreL's startup and shutdown time.
  If this feature is used the Schema table (on the same panel) should be cleared, too.

SQL result: Position of the active cell is displayed on the upper right of the result tab.

Improved Session startup and reload performance by reducing calls to Connection.getMetaData().getSchemas().

Recent files dialog has a new checkbox: "Show file preview".
  See menu Session --> File --> "Open recent or favourite file ..."

#580 Alias properties allows SQL LIKE syntax to configure schema loading:
  Menu Windows --> View Aliases --> select an Alias --> menu Aliases --> Alias properties --> tab Schemas
  --> section "Set ... in all Schemas ..." now has a small button next to the word "to" that opens a filter text field.
  The filter allows to use % and _ as wildcards much like the SQL LIKE syntax.

Upgraded JSqlParser to 2.2 snapshot version which contains fixes
 that up to now existed in a fork of JSqlParser for SQuirreL only, see https://github.com/JSQLParser/JSqlParser/pull/825

The combo box in the font chooser dialog of the Session Properties dialog (see bottom of tab SQL)
  now shows if a font is monospaced.


Triggered by bug #1395 a new SQL parser 'JSqlParser' was integrated, see https://github.com/JSQLParser/JSqlParser